RESOLVED FIXED 166469
REGRESSION(r209865): Crash when navigating back to some pages with compositing layers.
https://bugs.webkit.org/show_bug.cgi?id=166469
Summary REGRESSION(r209865): Crash when navigating back to some pages with compositin...
Andreas Kling
Reported 2016-12-23 15:02:05 PST
When activating the FrameView::clearBackingStores() optimization on all platforms, some crashiness was introduced. It doesn't look like the optimization actually helps memory usage any any significant way anymore, so I think we should just get rid of it. <rdar://problem/29109053>
Attachments
Patch (6.05 KB, patch)
2016-12-23 15:14 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2016-12-23 15:14:40 PST
Simon Fraser (smfr)
Comment 2 2016-12-23 15:20:35 PST
Comment on attachment 297721 [details] Patch Why did you enable it on Mac if it wasn't a measurable gain?
Andreas Kling
Comment 3 2016-12-23 15:29:26 PST
(In reply to comment #2) > Comment on attachment 297721 [details] > Patch > > Why did you enable it on Mac if it wasn't a measurable gain? For consistency, as I wrote in the original ChangeLog. I saw a chance to remove an iOS-only code path and potentially also get a win for Mac, and jumped at it. It was all seasonal wishful thinking :\
WebKit Commit Bot
Comment 4 2016-12-23 16:24:21 PST
Comment on attachment 297721 [details] Patch Clearing flags on attachment: 297721 Committed r210142: <http://trac.webkit.org/changeset/210142>
WebKit Commit Bot
Comment 5 2016-12-23 16:24:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.